pygluu/kubernetes/templates/alb/ingress.yaml
# Licensed under the Gluu Support License
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gluu
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:xxxx:certificate/xxxxxx
    alb.ingress.kubernetes.io/auth-session-cookie: custom-cookie
    alb.ingress.kubernetes.io/auth-session-timeout: '3600'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60,stickiness.type=lb_cookie
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.scim-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/identity/restv1/scim-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.openid-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/oxauth/.well-known/openid-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.uma-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/oxauth/restv1/uma2-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.webfinger-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/oxauth/.well-known/webfinger", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.simple-web-discovery-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/oxauth/.well-known/simple-web-discovery", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.fido-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/oxauth/restv1/fido-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.fido2-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/oxauth/restv1/fido2/configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.main-page-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/identity/", "StatusCode": "HTTP_301"}}'


spec:
  rules:
  - host: FQDN
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /.well-known/scim-configuration
        backend:
          serviceName: scim-redirect
          servicePort: use-annotation
      - path: /.well-known/openid-configuration
        backend:
          serviceName: openid-redirect
          servicePort: use-annotation
      - path: /.well-known/uma2-configuration
        backend:
          serviceName: uma-redirect
          servicePort: use-annotation
      - path: /.well-known/webfinger
        backend:
          serviceName: webfinger-redirect
          servicePort: use-annotation
      - path: /.well-known/simple-web-discovery
        backend:
          serviceName: simple-web-discovery-redirect
          servicePort: use-annotation
      - path: /.well-known/fido-configuration
        backend:
          serviceName: fido-redirect
          servicePort: use-annotation
      - path: /.well-known/fido2-configuration
        backend:
          serviceName: fido2-redirect
          servicePort: use-annotation
      - path: /
        backend:
          serviceName: main-page-redirect
          servicePort: use-annotation
      - path: /.well-known/scim-configuration
        backend:
          serviceName: oxtrust
          servicePort: 8080
      - path: /.well-known/openid-configuration
        backend:
          serviceName: oxauth
          servicePort: 8080
      - path: /.well-known/uma2-configuration
        backend:
          serviceName: oxauth
          servicePort: 8080
      - path: /.well-known/webfinger
        backend:
          serviceName: oxauth
          servicePort: 8080
      - path: /.well-known/simple-web-discovery
        backend:
          serviceName: oxauth
          servicePort: 8080
      - path: /.well-known/fido-configuration
        backend:
          serviceName: oxauth
          servicePort: 8080
      - path: /.well-known/fido2-configuration
        backend:
          serviceName: oxauth
          servicePort: 8080
      - path: /oxauth*
        backend:
          serviceName: oxauth
          servicePort: 8080
      - path: /identity*
        backend:
          serviceName: oxtrust
          servicePort: 8080
      - path: /idp*
        backend:
          serviceName: oxshibboleth
          servicePort: 8080
      - path: /passport*
        backend:
          serviceName: oxpassport
          servicePort: 8090
      - path: /casa*
        backend:
          serviceName: casa
          servicePort: 8080
